# texceditor

./: .gitignore  CMakeLists.txt  Makefile
src/: main.c
